--- a/package.json
+++ b/package.json
@@ -58,17 +58,20 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "prop-types": "^15.5.8",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.5",
     "redux": "^3.7.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.18.2"
   },
-  "repository" : { 
-    "type" : "git", 
-    "url" : "https://github.com/marciobarroso/react-redux-quickstart.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marciobarroso/react-redux-quickstart.git"
   }
 }
