--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-  ],
+  "presets": ["env", "react"],
   "plugins": [
     "react-html-attrs",
     "transform-object-rest-spread",
