--- a/package.json
+++ b/package.json
@@ -1,76 +1,58 @@
 {
-  "name": "react-redux-quickstart",
-  "version": "0.0.1",
-  "description": "Basic application to show how the redux interacts with react components",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "npm run build && webpack-dev-server"
-  },
-  "author": "Marcio Barroso",
+  "name": "react-bare-app",
+  "version": "1.0.0",
+  "main": "src/index.js",
   "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.6.1",
-    "ejs": "^2.5.2",
-    "enzyme": "^2.5.1",
-    "eslint": "^3.14.0",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "fs-extra": "^2.1.2",
-    "html-webpack-plugin": "^2.24.1",
-    "http-server": "^0.9.0",
-    "jsdom": "^9.8.3",
-    "jsdom-global": "^2.1.0",
-    "json-loader": "^0.5.4",
-    "mocha": "^3.1.2",
-    "nyc": "^10.1.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-test-renderer": "^15.5.4",
-    "retire": "^1.2.11",
-    "semver": "^5.3.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
-    "stubby": "^4.0.0",
-    "wdio-mocha-framework": "^0.5.3",
-    "wdio-phantomjs-service": "^0.2.2",
-    "wdio-spec-reporter": "^0.1.0",
-    "webdriverio": "^4.4.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+  "scripts": {
+    "build": "webpack --progress --colors -d",
+    "start": "webpack-dev-server --progress --colors -d",
+    "test": "mocha -c --require babel-register --require 'css-modules-require-hook/preset' --recursive ./test",
+    "test:watch": "yarn test -- --watch"
   },
-  "dependencies": {
-    "axios": "^0.16.2",
-    "babel-loader": "^6.4.1",
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "prop-types": "^15.5.8",
-    "react": "^15.3.2",
+    "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
+    "css-loader": "^0.28.1",
+    "css-modules-require-hook": "^4.0.6",
+    "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.5.0",
+    "eslint-plugin-jasmine": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.0",
+    "html-webpack-plugin": "^2.28.0",
+    "mocha": "^3.3.0",
+    "react-addons-test-utils": "^15.6.0",
+    "react-test-renderer": "^15.5.4",
+    "style-loader": "^0.17.0",
+    "stylelint": "^7.10.1",
+    "stylelint-config-css-modules": "^1.0.0",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-webpack-plugin": "^0.7.0",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
+    "prop-types": "^15.5.9",
+    "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.3.2",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "redux": "^3.7.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.2.1",
-    "redux-thunk": "^2.2.0",
-    "style-loader": "^0.18.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/marciobarroso/react-redux-quickstart.git"
+    "redux-thunk": "^2.2.0"
   }
 }
