--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,6 @@
   },
   "rules": {
     "import/no-extraneous-dependencies": ["error", {"devDependencies": ["test/**/*.js", "deploy/**/*.js", "*.js"]}],
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0, "no-console": 1
   }
 }
