--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
@@ -33,8 +34,11 @@
     "eslint-plugin-react": "^7.0.0",
     "html-webpack-plugin": "^2.28.0",
     "mocha": "^3.3.0",
+    "node-sass": "^4.5.3",
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^15.5.4",
+    "sass": "^1.0.0-beta.2",
+    "sass-loader": "^6.0.6",
     "sinon": "^2.3.5",
     "sinon-chai": "^2.11.0",
     "style-loader": "^0.17.0",
@@ -54,7 +58,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.0",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^4.2.1",
+    "redux-promise-middleware": "4.2.1",
     "redux-thunk": "^2.2.0"
   }
 }
